[package]
name = "vrcx-optimal-time"
version = "0.3.1"
edition = "2021"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
description = "Analyzes VRCX logs for optimal VRC playtimes"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zkxs/vrcx-optimal-time"
repository = "https://github.com/zkxs/vrcx-optimal-time"
documentation = "https://github.com/zkxs/vrcx-optimal-time"

[dependencies]
rusqlite = { version = "~0.28.0", features = ["bundled"] }
toml = "~0.5.9"
serde = { version = "^1.0.147", features = ["derive"] }
serde_derive = "^1.0.147"
chrono = "~0.4.22"
num-traits = "~0.2.15"

[profile.release]
lto = "thin"
