[package]
name = "vrcx-optimal-time"
version = "0.6.0"
edition = "2021"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
description = "Analyzes VRCX logs for optimal VRC playtimes"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zkxs/vrcx-optimal-time"
repository = "https://github.com/zkxs/vrcx-optimal-time"
documentation = "https://github.com/zkxs/vrcx-optimal-time"

[dependencies]
rusqlite = { version = "~0.28.0", features = ["bundled"] }
toml = "~0.7.2"
serde = { version = "^1.0.159", features = ["derive"] }
serde_derive = "^1.0.147"
chrono = { version = "~0.4.23", default-features = false, features = ["clock", "std"] }
num-traits = "~0.2.15"

[profile.release]
lto = "thin"
