[package]
name = "vrcx-optimal-time"
version = "0.6.0"
edition = "2024"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
description = "Analyzes VRCX logs for optimal VRC playtimes"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zkxs/vrcx-optimal-time"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
num-traits = "0.2"

[profile.release]
lto = "thin"
